--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+} */
+
+
+#button {
+  height: 50px;
+  width: 200px;
+  animation: App-logo-spin infinite 20s linear;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #7e2a2a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,9 +31,9 @@
   color: white;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
